# researchpy

./: .gitignore  LICENSE.txt  README.md  README.txt  TO_DO  pyproject.toml  setup.py
Tests/: Developing Researchpy.py  _test_patsy_info.py  test_anova.py  test_basic_stats.py  test_correlation.py  test_crosstab.py  test_difference_test.py  test_lm.py  test_logistic.py  test_model.py  test_ols.py  test_predict.py  test_signrank.py  test_summary.py  test_ttest.py  test_utility.py
docs/: summary-architecture.md
researchpy/: LogisticRegression.py  Notes on new update  Validation_Tests.ipynb  __init__.py  anova.py  anova_og.py  basic_stats.py  correlation.py  crosstab.py  difference_test.py  logit.py  model.py  ols.py  predict.py  regression.py  setup.py  signrank.py  summary.py  ttest.py  utility.py  version.py
researchpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
researchpy/MultivariableRegression/: Logistic.py  anova.py  lm.py  logistic.py  logit.py  ols.py
researchpy/core/: __init__.py  base.py  containerclasses.py  general_model.py  model.py
researchpy/models/: __init__.py  _model_backup.py  base.py  core_model.py  general_model.py  linear_model.py  ols_model.py  results.py
researchpy/models/multivariable/: __init__.py  _anova_backup.py  anova.py  lm.py  logistic.py  ols.py  regress.py
researchpy/models/postestimation/: __init__.py  likelihood_ratio.py
researchpy/objective_functions/: likelihood.py
researchpy/optimize/: iterative_algorithms.py  trackers.py
