[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpy"
version = "0.3.6"
authors = [ { name="Corey Bryant", email="CoreyBryant10@gmail.com" }]
maintainers = [ {name="Corey Bryant", email="CoreyBryant10@gmail.com" }]
description = "Researchpy produces Pandas DataFrames that contain relevant statistical testing information that is commonly required for academic research."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["researchpy", "statistics"]
dependencies = ['scipy', 'numpy', 'pandas', 'statsmodels', 'patsy']


[project.urls]
Homepage = "https://researchpy.readthedocs.io/"
Documentation = "https://researchpy.readthedocs.io/"
Repository = "https://github.com/researchpy/researchpy.git"