[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpy"
version = "0.4.0"
authors = [ { name="Corey Bryant", email="ResearchPy.Official@proton.me" }]
maintainers = [ {name="Corey Bryant", email="ResearchPy.Official@proton.me" }]
description = "Researchpy produces Pandas DataFrames that contain relevant statistical testing information that is commonly required for academic research."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["researchpy", "statistics"]
dependencies = ['scipy', 'numpy', 'pandas', 'statsmodels', 'patsy']


[project.urls]
Homepage = "https://researchpy.readthedocs.io/"
Documentation = "https://researchpy.readthedocs.io/"
Repository = "https://github.com/researchpy/researchpy.git"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["researchpy*"]